# Forest3D

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
configs/examples/: coastal.yaml  dense_forest.yaml  rocky_landscape.yaml
dem/: enhanced_heightmap.tif  terrain.tif  terrain_enhanced.tif
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
models/tree/MT_PM_V60_Acer_buergerianum_01_01/: model.config
models/tree/MT_PM_V60_Alnus_cremastogyne_01_01/: model.config
src/forest3d/: __init__.py  __main__.py
src/forest3d/cli/: __init__.py  convert.py  generate.py  launch.py  main.py  terrain.py
src/forest3d/config/: __init__.py  loader.py  schema.py
src/forest3d/core/: __init__.py  converter.py  forest.py  terrain.py
src/forest3d/utils/: __init__.py  logging.py  progress.py  sdf.py
